// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CobblestoneHero custom projectName 1`] = `
<div
  class="d:f w:100 h:100vh"
>
  <div
    class="m:a"
  >
    <div
      class="typeset contain ta:c nm-t:4xl"
    >
      <img
        alt=""
        src="/_assets/images/cobblestone.png"
      />
       
      <h1>
        Welcome to My Project!
      </h1>
       
      <p>
        
        You should start with the
        
        <a
          href="https://github.com/PebbleRoad/cobblestone"
          noopener=""
          noreferrer=""
          target="_blank"
        >
          <strong>
            README
          </strong>
        </a>
        
        :)
      
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots CobblestoneHero default props 1`] = `
<div
  class="d:f w:100 h:100vh"
>
  <div
    class="m:a"
  >
    <div
      class="typeset contain ta:c nm-t:4xl"
    >
      <img
        alt=""
        src="/_assets/images/cobblestone.png"
      />
       
      <h1>
        Welcome to Cobblestone!
      </h1>
       
      <p>
        
        You should start with the
        
        <a
          href="https://github.com/PebbleRoad/cobblestone"
          noopener=""
          noreferrer=""
          target="_blank"
        >
          <strong>
            README
          </strong>
        </a>
        
        :)
      
      </p>
    </div>
  </div>
</div>
`;
